Wed Feb  6 00:20:57 CET 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in python/Makefile.am: attempst to tweak to get
	  full memory debug...
	* python/generator.py python/libxsl.py python/libxslt-python-api.xml
	  python/libxslt.c python/libxslt_wrap.h python/libxsltclass.txt:
	  the basic API starts to work
	* python/tests/test.*: first basic test
	* libxslt/xsltutils.c: fixed a comment

Tue Feb  5 17:35:00 CET 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in doc/Makefile.am: do not install outside of prefix,
	  make sure the API get shipped.

Mon Feb  4 19:47:32 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.[ch] doc/libxslt-api.xml doc/libxslt-refs.xml:
	  reactivated xsltMatchPattern() since this is really something
	  one may want to have access to in an extension function.
	* Makefile.am configure.in python/Makefile.am python/generator.py
	  python/libxml_wrap.h python/libxsl.py python/libxslt-python-api.xml
	  python/libxslt.c python/libxslt_wrap.h python/libxsltclass.txt
	  python/types.c: started working on the python bindings, borrowed
	  most of the work done for libxml2, most of the generator code
	  is similar. Commit at the point where this compiles cleanly and
	  "import libxslt" doesn't yield any missing entry point.

Wed Jan 30 12:46:41 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c: patch from Charles Bozeman to support
	  child::* patterns.

Wed Jan 30 12:35:28 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/keys.c: Bob Stayton pointed out a problem when
	  using unions in key match patterns.
	* tests/docs/Makefile.am tests/docs/bug-70.xml
	  tests/general/Makefile.am tests/general/bug-70.*: added a 
	  specific example in the regression tests
	
Sun Jan 27 13:54:10 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: avoid a problem with Sun's Workshop CC,
	  closes bug #69809 submitted by Michael Kroell
